--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,19 @@
 .App {
-  max-width: 600px;
-  margin: 30px auto;
+  max-width: 550px;
+  margin: 40px auto;
 }
 
 .App footer {
   font-size: 11px;
   margin: 15px 0;
+}
+.WeatherInfo {
+  margin-left: 5px;
+}
+.App a {
+  color: #0c6efd;
+  text-decoration: none;
+}
+.App a:hover {
+  color: #f96d00;
 }
