--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
 * {
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 .background {
   width: 100%;
@@ -26,7 +28,7 @@ video:hover {
 
 .App {
   max-width: 550px;
-  margin: 40px auto;
+  margin: 10px auto;
   position: relative;
   height: 100%;
   width: 100%;
@@ -53,6 +55,23 @@ video:hover {
   max-width: 1550px;
 }
 footer {
-  box-shadow: rgba(255, 255, 255, 0.236) 0px 2px 4px 0px,
-    rgba(255, 255, 255, 0.281) 0px 2px 16px 0px;
+  text-align: center;
+  padding: 5px;
+    color: rgb(135, 135, 135);
+  background-color: #fdfdfd4f;
+  box-shadow: rgba(255, 255, 255, 0.513) 0px 2px 4px 0px,
+    rgba(255, 255, 255, 0.682) 0px 2px 19px 0px;
+}
+.WeatherInfo h1 {
+  color: #ce4097;
+  font-weight: bold;
+  font-size: 32px;
+  margin-bottom: 7px;
+}
+.WeatherInfo li {
+  font-weight: 400;
+}
+.Weather hr {
+  color: #ce4097;
+  margin-top: 5px;
 }
